--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-   <center>
+  
     <h1>
       <p>COLLEGE OF INFORMATION AND COMPUTING SCIENCES </p>
     </h1>
@@ -34,8 +34,8 @@
     document.write("HELLO WORLD");
     console.log("Hello World");
 
-    let name = "CEJAY PELOBELLO";
-    var age = 20;
+    let name = "Ken Baron Cabale";
+    var age = 22;
     const remarks = "STUDENT";
 
     document.write("<br>");
@@ -43,10 +43,10 @@
     document.getElementById("result").innerHTML = name + " " + remarks + " " + age + " ";
     document.getElementsByClassName("output")[0].innerHTML  = name + " " + remarks +  " " + age +" ";
 
-    document.getElementById("outputName").innerHTML = displayName("CEJAY PELOBELLO");
+    document.getElementById("outputName").innerHTML = displayName("Ken Baron Cabale");
 
     document.write("<br>");
-    document.write(displayName("CEJAY PELOBELLO"));
+    document.write(displayName("Ken Baron Cabale"));
     document.write("<br>");
     document.write(ComputeTwoNumbers(12,3));
     console.log(ComputeTwoNumbers(12,3));
@@ -54,10 +54,10 @@
     document.getElementById("compute").innerHTML = ComputeTwoNumbers(12,3);
 
 
-    checkGrade();
+    
     ComputeTwoNumbers();
 
   </script>
-    </center>
+    
 </body>
 </html>
